--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,7 @@ services:
   # Main Server
   nginx:
     container_name: nginx
-    image: nginx:1.25.4-alpine
+    image: docker.io/nginx:1.25.4-alpine
     restart: unless-stopped
     ports:
       - "80:80"
@@ -32,7 +32,7 @@ services:
   # f.kth.se Wordpress and Database
   mariadb-f.kth.se:
     container_name: mariadb-f.kth.se
-    image: mariadb
+    image: docker.io/mariadb
     restart: unless-stopped
     volumes:
       - ./services/f.kth.se/mariadb:/var/lib/mysql
@@ -43,7 +43,7 @@ services:
   wordpress-f.kth.se:
     container_name: wordpress-f.kth.se
     # image: wordpress:6.4.3-php8.1-fpm-alpine
-    image: wordpress:5.6.1-php8.0-fpm-alpine
+    image: docker.io/wordpress:5.6.1-php8.0-fpm-alpine
     restart: unless-stopped
     volumes:
       - ./services/f.kth.se/wordpress:/var/www/html/
@@ -59,7 +59,7 @@ services:
   # fysikalen.se Wordpress and Database
   mariadb-fysikalen.se:
     container_name: mariadb-fysikalen.se
-    image: mariadb
+    image: docker.io/mariadb
     restart: unless-stopped
     volumes:
       - ./services/fysikalen.se/mariadb/:/var/lib/mysql
@@ -70,7 +70,7 @@ services:
   wordpress-fysikalen.se:
     container_name: wordpress-fysikalen.se
     # image: wordpress:6.4.3-php8.1-fpm-alpine
-    image: wordpress:5.6.1-php8.0-fpm-alpine
+    image: docker.io/wordpress:5.6.1-php8.0-fpm-alpine
     restart: unless-stopped
     volumes:
       - ./services/fysikalen.se/wordpress:/var/www/html/
@@ -86,7 +86,7 @@ services:
   # ffusion.se Wordpress and Database
   mariadb-ffusion.se:
     container_name: mariadb-ffusion.se
-    image: mariadb
+    image: docker.io/mariadb
     restart: unless-stopped
     volumes:
       - ./services/ffusion.se/mariadb:/var/lib/mysql
@@ -97,7 +97,7 @@ services:
 
   wordpress-ffusion.se:
     container_name: wordpress-ffusion.se
-    image: wordpress:6.4.3-php8.1-fpm-alpine
+    image: docker.io/wordpress:6.4.3-php8.1-fpm-alpine
     restart: unless-stopped
     volumes:
       - ./services/ffusion.se/wordpress:/var/www/html/
@@ -114,13 +114,13 @@ services:
   ## Sangbok
   sangbok:
     container_name: sangbok
-    image: "ghcr.io/fysiksektionen/sangbok-html:latest"
+    image: ghcr.io/fysiksektionen/sangbok-html:latest
 
 
   ## Kons Count
   kons-count-redis:
     container_name: kons-count-redis
-    image: "redis:alpine"
+    image: docker.io/redis:alpine
     volumes:
       - ./services/kons-count/redis/:/data
 
