--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -33,6 +33,22 @@ http {
             proxy_pass http://kons-count:8000/;
         }
 
+        location /fadderiet/ {
+            index index.php;
+            try_files $uri $uri/ /fadderiet/index.php?$args;
+        }
+
+        location ~ ^/fadderiet/.*\.php$ {
+            rewrite ^/fadderiet/(.*)$ /$1 break;
+
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            fastcgi_pass wordpress-fadderiet:9000;
+            fastcgi_index index.php;
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
+            fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+        }
+
         # Wordpress options. DO NOT CHANGE
         location / {
             try_files $uri $uri/ /wordpress$uri?$args;
