--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -166,7 +166,13 @@ http {
     server {
         listen              80;
         server_name         ffusion.se;
-        return 301 https://ffusion.se$request_uri;
-    }
 
+        location /.well-known/acme-challenge/ {
+            root /certbot;
+        }
+
+        location / {
+            return 301 https://ffusion.se$request_uri;
+        }
+    }
 }
