--- a/compose.yaml
+++ b/compose.yaml
@@ -14,6 +14,7 @@ services:
       - wordpress-fadderiet
       - sangbok
       - kons-count
+      - cyberfohs
     volumes:
       - ./services/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./services/nginx/certificates:/etc/nginx/certificates
@@ -30,6 +31,8 @@ services:
 
       - ./services/arcade:/f.kth.se/arcade
       - ./services/arcade/home/index.html:/f.kth.se/arcade/index.html
+
+      - ./services/cyberfohs/static:/f.kth.se/cyberfohs/public/staticfiles
 
       - ./services/misc/GoogleIDPMetadata.xml:/f.kth.se/google/GoogleIDPMetadata.xml
       - ./services/misc/f.png:/f.kth.se/f.png
@@ -173,3 +176,11 @@ services:
       - kons-count-redis
     init: true
 
+  cyberfohs:
+    container_name: cyberfohs
+    image: ghcr.io/fysiksektionen/cyberfohs-appen:${CYBERFOHS_VERSION}
+    volumes:
+      - ./services/cyberfohs/static:/src/static
+      - ./services/cyberfohs/data/db:/src/db
+      - ./services/cyberfohs/secretkey.txt:/src/secretkey.txt
+    init: true
