--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -33,6 +33,16 @@ http {
             proxy_pass http://kons-count:8000/;
         }
 
+        location /cyberfohs/public/staticfiles/ {
+        }
+
+        location /cyberfohs/ {
+              proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+              proxy_set_header Host $http_host;
+              proxy_redirect off;
+              proxy_pass http://cyberfohs:8000;
+        }
+
         location /fadderiet/ {
             index index.php;
             try_files $uri $uri/ /fadderiet/index.php?$args;
