--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -14,8 +14,8 @@ http {
         listen              443 ssl;
 
         server_name         f.kth.se www.f.kth.se;
-        ssl_certificate     certificates/f.kth.se.crt;
-        ssl_certificate_key certificates/f.kth.se.key;
+        ssl_certificate     certificates/live/f.kth.se/fullchain.pem;
+        ssl_certificate_key certificates/live/f.kth.se/privkey.pem;
 
         root /f.kth.se;
 
@@ -87,8 +87,8 @@ http {
 
         listen              443 ssl;
         server_name         fysikalen.se www.fysikalen.se;
-        ssl_certificate     certificates/fysikalen.se.crt;
-        ssl_certificate_key certificates/fysikalen.se.key;
+        ssl_certificate     certificates/live/fysikalen.se/fullchain.pem;
+        ssl_certificate_key certificates/live/fysikalen.se/privkey.pem;
         root /fysikalen.se;
 
 
@@ -121,8 +121,9 @@ http {
 
         listen              443 ssl;
         server_name         ffusion.se www.ffusion.se;
-        ssl_certificate     certificates/ffusion.se.crt;
-        ssl_certificate_key certificates/ffusion.se.key;
+        ssl_certificate     certificates/live/ffusion.se/fullchain.pem;
+        ssl_certificate_key certificates/live/ffusion.se/privkey.pem;
+
         root /ffusion.se;
 
 
@@ -155,22 +156,43 @@ http {
         listen              80;
         listen              443 ssl;
         server_name fysiksektionen.se www.fysiksektionen.se;
-        ssl_certificate     certificates/fysiksektionen.se.crt;
-        ssl_certificate_key certificates/fysiksektionen.se.key;
-        return 301 https://f.kth.se$request_uri;
+        ssl_certificate     certificates/live/fysiksektionen.se/fullchain.pem;
+        ssl_certificate_key certificates/live/fysiksektionen.se/privkey.pem;
+
+        location /.well-known/acme-challenge/ {
+            root /certbot;
+        }
+
+        location / {
+            return 301 https://f.kth.se$request_uri;
+        }
     }
 
     # Only allow https connections
     server {
         listen              80;
         server_name         f.kth.se www.f.kth.se;
-        return 301 https://f.kth.se$request_uri;
+
+        location /.well-known/acme-challenge/ {
+            root /certbot;
+        }
+
+        location / {
+            return 301 https://f.kth.se$request_uri;
+        }
     }
 
     server {
         listen              80;
         server_name         fysikalen.se www.fysikalen.se;
-        return 301 https://fysikalen.se$request_uri;
+
+        location /.well-known/acme-challenge/ {
+            root /certbot;
+        }
+
+        location / {
+            return 301 https://fysikalen.se$request_uri;
+        }
     }
 
     server {
