--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -33,7 +33,7 @@ http {
             proxy_pass http://kons-count:8000/;
         }
 
-        location /cyberfohs/public/staticfiles/ {
+        location /cyberfohs/public/ {
         }
 
         location /cyberfohs/ {
