--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -5,6 +5,7 @@ http {
     ssl_session_cache   shared:SSL:10m;
     ssl_session_timeout 10m;
     keepalive_timeout   70;
+    client_max_body_size 8M;
 
     server {
         error_log /var/log/nginx/error.log debug;
