Redirect ffusion.se to kthfusion.com

--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -127,28 +127,31 @@ http {
 
         root /ffusion.se;
 
-
+	# Redirect to new website kthfusion.com
+	location / {
+		return 301 https://www.kthfusion.com$request_uri;
+	}
 
         # Wordpress options. DO NOT CHANGE
-        location / {
-            try_files $uri $uri/ /wordpress$uri?$args;
-        }
+	#location / {
+        #    try_files $uri $uri/ /wordpress$uri?$args;
+        #}
 
-        location /wordpress/ {
-            index index.php;
-            try_files $uri $uri/ /wordpress/index.php?$args;
-        }
+        #location /wordpress/ {
+        #    index index.php;
+        #    try_files $uri $uri/ /wordpress/index.php?$args;
+        #}
 
-        location ~ ^/wordpress/.*\.php|^/$ {
-            rewrite ^/wordpress/(.*)$ /$1 break;
+        #location ~ ^/wordpress/.*\.php|^/$ {
+        #    rewrite ^/wordpress/(.*)$ /$1 break;
 
-            fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_pass wordpress-ffusion.se:9000;
-            fastcgi_index index.php;
-            include fastcgi_params;
-            fastcgi_param SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
-            fastcgi_param SCRIPT_NAME $fastcgi_script_name;
-        }
+        #    fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        #    fastcgi_pass wordpress-ffusion.se:9000;
+        #    fastcgi_index index.php;
+        #    include fastcgi_params;
+        #    fastcgi_param SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
+        #    fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+        #}
     }
 
 
