Add bittan-test proxy forward

--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -60,6 +60,10 @@ http {
             fastcgi_param SCRIPT_NAME $fastcgi_script_name;
         }
 
+        location /bittan-test/ {
+            proxy_pass http://bittan_test_server:8000;
+        }
+
         # Wordpress options. DO NOT CHANGE
         location / {
             try_files $uri $uri/ /wordpress$uri?$args;
