Apply rework env changes in bittan_test

--- a/compose.yaml
+++ b/compose.yaml
@@ -196,23 +196,29 @@ services:
   bittan_test_server:
     container_name: bittan_test_server
     image: ghcr.io/fysiksektionen/bittan-backend:${BITTAN_TEST_VERSION}
+    env_file: ./services/bittan_test/bittan_test_server.env
     environment:
-      BITTAN_BACKEND_URL: "https://google.com"
+      BITTAN_BACKEND_URL: "https://f.kth.se/bittan-test"
+      ALLOWED_HOSTS: '["f.kth.se"]'
+      DATABASE_HOST: bittan_test_postgres
+      DATABASE_NAME: bittan_test_db
+      DATABASE_USER: postgres
+      DATABASE_PORT: 5432
     ports:
       - '8000:8000'
     depends_on:
       bittan_test_postgres:
         condition: service_healthy
 
-  bittan_test_postgres: # TODO bittan tror att servicen ska heta `postgres` så jag måste ändra i settings.py 'HOST'
+  bittan_test_postgres:
     container_name: bittan_test_postgres
     image: postgres
     volumes:
       - ./services/bittan_test/postgres_data:/var/lib/postgresql/data
-    environment: # TODO put this in a file instead?
-      POSTGRES_DB: bittan_db
+    env_file: ./services/bittan_test/bittan_test_postgres.env
+    environment:
+      POSTGRES_DB: bittan_test_db
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
     ports:
       - '5432:5432'
     healthcheck:
