Specify DEBUG in bittan_test_server

--- a/compose.yaml
+++ b/compose.yaml
@@ -204,6 +204,7 @@ services:
       DATABASE_NAME: bittan_test_db
       DATABASE_USER: postgres
       DATABASE_PORT: 5432
+      DEBUG: false
     ports:
       - '8000:8000'
     depends_on:
