--- a/compose.yaml
+++ b/compose.yaml
@@ -15,6 +15,7 @@ services:
       - sangbok
       - kons-count
       - cyberfohs
+      - bittan_test_server
     volumes:
       - ./services/nginx/nginx.conf:/etc/nginx/nginx.conf
 
