--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -63,6 +63,7 @@ http {
         location /bittan-test/ {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $http_host;
+            proxy_redirect off;
             proxy_pass http://bittan_test_server:8000;
         }
 
