--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -60,6 +60,9 @@ http {
             fastcgi_param SCRIPT_NAME $fastcgi_script_name;
         }
 
+        location /bittan-test/static/ {
+        }
+
         location /bittan-test/ {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $http_host;
