Use ip filtering for bittant-test/swish/callback

--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -70,6 +70,15 @@ http {
             proxy_pass http://bittan_test_server:8000;
         }
 
+        location /bittan-test/swish/callback/ {
+            allow 89.46.83.0/24;
+            allow 103.57.74.0/24;
+            allow 77.81.6.112;
+            deny all;
+
+            proxy_pass http://bittan_test_server:8000;
+        }
+
         # Wordpress options. DO NOT CHANGE
         location / {
             try_files $uri $uri/ /wordpress$uri?$args;
