--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -79,6 +79,10 @@ http {
             proxy_pass http://bittan_test_server:8000;
         }
 
+        location /biljett-test/ {
+            try_files $uri /biljett-test/index.html;
+        }
+
         # Wordpress options. DO NOT CHANGE
         location / {
             try_files $uri $uri/ /wordpress$uri?$args;
