--- a/compose.yaml
+++ b/compose.yaml
@@ -213,8 +213,7 @@ services:
       DATABASE_PORT: 5432
       SWISH_PEM_FILE_PATH: ./certificates/myCertificate.pem
       SWISH_KEY_FILE_PATH: ./certificates/PrivateKey.key
-      PYTHONUNBUFFERED: 1
-      DEBUG: "True"
+      DEBUG: "False"
     ports:
       - '8000:8000'
     depends_on:
