Add bittan_test project (#2)
* Add bittan_test version

* Add bittan_test containers

* Correctly fetch image from bittan-backend instead of bittan

* Add more required stuff to bittan_test_server

* Add TODO on service name

* Add bittan-test proxy forward

* Add bittan_test to gitignore

* Apply rework env changes in bittan_test

* Update bittan_test to v0.0.3

* Specify DEBUG in bittan_test_server

* Make nginx depend_on bittan_test_server

* Set bittan_test to v0.0.4

* Set proxy_redirect in bittan-test

* Use bittan v0.0.5

* Use bittan v0.0.6

* Change how DEBUG is set

* Add volume for static files to bittan_test_server

* Use bittan v0.0.7

* Serve static files for bittan-test using nginx

* Create download_bittan_test.sh

* Add bittan_test_frontend to gitignore

* Add download_bittan_test.sh

* Add volume to bittan_test_frontend

* Use ip filtering for bittant-test/swish/callback

* Allow routing in biljett_test suing try_files

* Configure certificate files

* Change folder name for swish_certificates

* Remove DEBUG

* Update BITTAN_TEST_VERSION

* Protect bittan_test files

* Create backup_bittan_test

* Correctly expand list of TO_PROTECT files

* Make script executable

--- a/compose.yaml
+++ b/compose.yaml
@@ -15,6 +15,7 @@ services:
       - sangbok
       - kons-count
       - cyberfohs
+      - bittan_test_server
     volumes:
       - ./services/nginx/nginx.conf:/etc/nginx/nginx.conf
 
@@ -43,6 +44,9 @@ services:
       - ./services/misc/f.png:/f.kth.se/f.png
       - ./services/misc/logo.png:/f.kth.se/logo.png
       - ./services/misc/robots.txt:/f.kth.se/robots.txt
+
+      - ./services/bittan_test/static:/f.kth.se/bittan-test/static
+      - ./services/bittan_test_frontend:/f.kth.se/biljett-test
 
   # Provides SSL certificates
   certbot:
@@ -191,3 +195,44 @@ services:
       - ./services/cyberfohs/secretkey.txt:/src/secretkey.txt
 
     init: true
+
+  ## bittan_test
+  bittan_test_server:
+    container_name: bittan_test_server
+    image: ghcr.io/fysiksektionen/bittan-backend:${BITTAN_TEST_VERSION}
+    env_file: ./services/bittan_test/bittan_test_server.env
+    volumes:
+      - ./services/bittan_test/static:/bittan/static
+      - ./services/bittan_test/swish_certificates:/bittan/certificates
+    environment:
+      BITTAN_BACKEND_URL: "https://f.kth.se/bittan-test"
+      ALLOWED_HOSTS: '["f.kth.se"]'
+      DATABASE_HOST: bittan_test_postgres
+      DATABASE_NAME: bittan_test_db
+      DATABASE_USER: postgres
+      DATABASE_PORT: 5432
+      SWISH_PEM_FILE_PATH: ./certificates/myCertificate.pem
+      SWISH_KEY_FILE_PATH: ./certificates/PrivateKey.key
+      DEBUG: "False"
+    ports:
+      - '8000:8000'
+    depends_on:
+      bittan_test_postgres:
+        condition: service_healthy
+
+  bittan_test_postgres:
+    container_name: bittan_test_postgres
+    image: postgres
+    volumes:
+      - ./services/bittan_test/postgres_data:/var/lib/postgresql/data
+    env_file: ./services/bittan_test/bittan_test_postgres.env
+    environment:
+      POSTGRES_DB: bittan_test_db
+      POSTGRES_USER: postgres
+    ports:
+      - '5432:5432'
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 1s
+      timeout: 5s
+      retries: 10
