--- a/compose.yaml
+++ b/compose.yaml
@@ -214,6 +214,7 @@ services:
       DATABASE_PORT: 5432
       SWISH_PEM_FILE_PATH: ./certificates/myCertificate.pem
       SWISH_KEY_FILE_PATH: ./certificates/PrivateKey.key
+      SWISH_PAYEE_ALIAS: 1230810689
       DEBUG: "False"
     ports:
       - '8000:8000'
