--- a/compose.yaml
+++ b/compose.yaml
@@ -215,6 +215,7 @@ services:
       SWISH_PEM_FILE_PATH: ./certificates/myCertificate.pem
       SWISH_KEY_FILE_PATH: ./certificates/PrivateKey.key
       SWISH_PAYEE_ALIAS: 1230810689
+      SWISH_API_URL: https://staging.getswish.pub.tds.tieto.com/swish-cpcapi
       DEBUG: "False"
     ports:
       - '8000:8000'
