Add config for bittan_marke

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /services/signature
 /services/bittan_test
 /services/bittan_test_frontend
+/services/bittan_marke
+/services/bittan_marke_frontend
