--- a/compose.yaml
+++ b/compose.yaml
@@ -48,6 +48,9 @@ services:
       - ./services/bittan_test/static:/f.kth.se/bittan-test/static
       - ./services/bittan_test_frontend:/f.kth.se/biljett-test
 
+      - ./services/bittan_marke/static:/f.kth.se/bittan-marke-django/static
+      - ./services/bittan_marke_frontend:/f.kth.se/bittan-marke
+
   # Provides SSL certificates
   certbot:
     container_name: certbot
@@ -231,6 +234,49 @@ services:
     env_file: ./services/bittan_test/bittan_test_postgres.env
     environment:
       POSTGRES_DB: bittan_test_db
+      POSTGRES_USER: postgres
+    ports:
+      - '5432:5432'
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 1s
+      timeout: 5s
+      retries: 10
+
+  ## bittan_marke
+  bittan_marke_server:
+    container_name: bittan_marke_server
+    image: ghcr.io/fysiksektionen/bittan-backend:${BITTAN_MARKE_VERSION}
+    env_file: ./services/bittan_marke/bittan_marke_server.env
+    volumes:
+      - ./services/bittan_marke/static:/bittan/static
+      - ./services/bittan_marke/swish_certificates:/bittan/certificates
+      - ./services/bittan_marke/gmail_creds:/bittan/gmail_creds
+    environment:
+      BITTAN_BACKEND_URL: "https://f.kth.se/bittan-marke"
+      ALLOWED_HOSTS: '["f.kth.se"]'
+      DATABASE_HOST: bittan_marke_postgres
+      DATABASE_NAME: bittan_marke_db
+      DATABASE_USER: postgres
+      DATABASE_PORT: 5432
+      SWISH_PEM_FILE_PATH: ./certificates/swish_certificate_202503132004.pem
+      SWISH_KEY_FILE_PATH: ./certificates/MySwishKey.key
+      SWISH_API_URL: https://cpc.getswish.net/swish-cpcapi
+      DEBUG: "False"
+    ports:
+      - '8000:8000'
+    depends_on:
+      bittan_marke_postgres:
+        condition: service_healthy
+
+  bittan_marke_postgres:
+    container_name: bittan_marke_postgres
+    image: postgres
+    volumes:
+      - ./services/bittan_marke/postgres_data:/var/lib/postgresql/data
+    env_file: ./services/bittan_marke/bittan_marke_postgres.env
+    environment:
+      POSTGRES_DB: bittan_marke_db
       POSTGRES_USER: postgres
     ports:
       - '5432:5432'
