--- a/compose.yaml
+++ b/compose.yaml
@@ -16,6 +16,7 @@ services:
       - kons-count
       - cyberfohs
       - bittan_test_server
+      - bittan_marke_server
     volumes:
       - ./services/nginx/nginx.conf:/etc/nginx/nginx.conf
 
