--- a/compose.yaml
+++ b/compose.yaml
@@ -254,18 +254,16 @@ services:
       - ./services/bittan_marke/swish_certificates:/bittan/certificates
       - ./services/bittan_marke/gmail_creds:/bittan/gmail_creds
     environment:
-      BITTAN_BACKEND_URL: "https://f.kth.se/bittan-marke"
+      BITTAN_BACKEND_URL: "https://f.kth.se/bittan-marke-django"
       ALLOWED_HOSTS: '["f.kth.se"]'
       DATABASE_HOST: bittan_marke_postgres
       DATABASE_NAME: bittan_marke_db
       DATABASE_USER: postgres
-      DATABASE_PORT: 5433
+      DATABASE_PORT: 5432
       SWISH_PEM_FILE_PATH: ./certificates/swish_certificate_202503132004.pem
       SWISH_KEY_FILE_PATH: ./certificates/MySwishKey.key
       SWISH_API_URL: https://cpc.getswish.net/swish-cpcapi
       DEBUG: "False"
-    ports:
-      - '8001:8000'
     depends_on:
       bittan_marke_postgres:
         condition: service_healthy
@@ -279,8 +277,6 @@ services:
     environment:
       POSTGRES_DB: bittan_marke_db
       POSTGRES_USER: postgres
-    ports:
-      - '5433:5432'
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 1s
