--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -83,6 +83,27 @@ http {
             try_files $uri /biljett-test/index.html;
         }
 
+        location /bittan-marke-django/static/ {
+        }
+
+        location /bittan-marke-django/ {
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $http_host;
+            proxy_redirect off;
+            proxy_pass http://bittan_marke_server:8000;
+        }
+
+        location /bittan-marke-django/swish/callback/ {
+            allow 213.132.115.94;
+            deny all;
+
+            proxy_pass http://bittan_marke_server:8000;
+        }
+
+        location /bittan-marke/ {
+            try_files $uri /bittan-marke/index.html;
+        }
+
         # Wordpress options. DO NOT CHANGE
         location / {
             try_files $uri $uri/ /wordpress$uri?$args;
