--- a/compose.yaml
+++ b/compose.yaml
@@ -16,7 +16,7 @@ services:
       - kons-count
       - cyberfohs
       - bittan_test_server
-      - bittan_marke_server
+      - bittan-marke-server
     volumes:
       - ./services/nginx/nginx.conf:/etc/nginx/nginx.conf
 
@@ -241,8 +241,8 @@ services:
       retries: 10
 
   ## bittan_marke
-  bittan_marke_server:
-    container_name: bittan_marke_server
+  bittan-marke-server:
+    container_name: bittan-marke-server
     image: ghcr.io/fysiksektionen/bittan-backend:${BITTAN_MARKE_VERSION}
     env_file: ./services/bittan_marke/bittan_marke_server.env
     volumes:
@@ -252,7 +252,8 @@ services:
       - ./services/bittan_marke/logs:/bittan/logs
     environment:
       BITTAN_BACKEND_URL: "https://f.kth.se/bittan-marke-django"
-      ALLOWED_HOSTS: '["f.kth.se"]'
+      BITTAN_FRONTEND_URL: "https://f.kth.se/bittan-marke"
+      ALLOWED_HOSTS: '["f.kth.se", "bittan-marke-server"]'
       DATABASE_HOST: bittan_marke_postgres
       DATABASE_NAME: bittan_marke_db
       DATABASE_USER: postgres
