--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -90,14 +90,14 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $http_host;
             proxy_redirect off;
-            proxy_pass http://bittan_marke_server:8000;
+            proxy_pass http://bittan-marke-server:8000;
         }
 
         location /bittan-marke-django/swish/callback/ {
             allow 213.132.115.94;
             deny all;
 
-            proxy_pass http://bittan_marke_server:8000;
+            proxy_pass http://bittan-marke-server:8000;
         }
 
         location /bittan-marke/ {
