--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ CYBERFOHS_VERSION=v2024.1.0
 SIGNATURE_VERSION=v0.0.6
 BITTAN_TEST_VERSION=v1.0.1-test
 BITTAN_MARKE_VERSION=v1.3.2-marke
+BITTAN_FYSIKALEN_VERSION=PLACEHOLDER
