Include bittan_fysikalen stuff in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@
 /services/bittan_test_frontend
 /services/bittan_marke
 /services/bittan_marke_frontend
+/services/bittan_fysikalen
+/services/bittan_fysikalen_frontend
