Redirect /en/tickets to /biljetter

--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -158,6 +158,10 @@ http {
             try_files $uri /biljetter/index.html;
         }
 
+        location /en/tickets/ {
+            return 302 /biljetter/;
+        }
+
         # Wordpress options. DO NOT CHANGE
         location / {
             try_files $uri $uri/ /wordpress$uri?$args;
