--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -104,6 +104,23 @@ http {
             try_files $uri /bittan-marke/index.html;
         }
 
+        location /bittan-fysikalen/static/ {
+        }
+
+        location /bittan-fysikalen/ {
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $http_host;
+            proxy_redirect off;
+            proxy_pass http://bittan-fysikalen-server:8000;
+        }
+
+        location /bittan-fysikalen/swish/callback/ {
+            allow 213.132.115.94;
+            deny all;
+
+            proxy_pass http://bittan-fysikalen-server:8000;
+        }
+
         # Wordpress options. DO NOT CHANGE
         location / {
             try_files $uri $uri/ /wordpress$uri?$args;
@@ -137,6 +154,13 @@ http {
         root /fysikalen.se;
 
 
+        location /biljetter/ {
+            try_files $uri /biljetter/index.html;
+        }
+
+        location /en/tickets/ {
+            return 302 /biljetter/;
+        }
 
         # Wordpress options. DO NOT CHANGE
         location / {
