Relocate some more paths

--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -161,6 +161,14 @@ http {
         location /en/tickets/ {
             return 302 /biljetter/;
         }
+	
+	location /en/tickets-2-2/ {
+		return 302 /biljetter/;
+	}
+
+	location /biljetter-3/ {
+		return 302 /biljetter/;
+	}
 
         # Wordpress options. DO NOT CHANGE
         location / {
