--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,7 @@
 /services/cyberfohs
 /services/certbot
 /services/signature
-/services/bittan_test
-/services/bittan_test_frontend
+/services/bittan_marke
+/services/bittan_marke_frontend
+/services/bittan_fysikalen
+/services/bittan_fysikalen_frontend
