--- a/compose.yaml
+++ b/compose.yaml
@@ -15,7 +15,8 @@ services:
       - sangbok
       - kons-count
       - cyberfohs
-      - bittan_test_server
+      - bittan-marke-server
+      - bittan-fysikalen-server
     volumes:
       - ./services/nginx/nginx.conf:/etc/nginx/nginx.conf
 
@@ -45,8 +46,11 @@ services:
       - ./services/misc/logo.png:/f.kth.se/logo.png
       - ./services/misc/robots.txt:/f.kth.se/robots.txt
 
-      - ./services/bittan_test/static:/f.kth.se/bittan-test/static
-      - ./services/bittan_test_frontend:/f.kth.se/biljett-test
+      - ./services/bittan_marke/static:/f.kth.se/bittan-marke-django/static
+      - ./services/bittan_marke_frontend:/f.kth.se/bittan-marke
+
+      - ./services/bittan_fysikalen/static:/fysikalen.se/bittan-fysikalen/static
+      - ./services/bittan_fysikalen_frontend:/fysikalen.se/biljetter
 
   # Provides SSL certificates
   certbot:
@@ -196,44 +200,82 @@ services:
 
     init: true
 
-  ## bittan_test
-  bittan_test_server:
-    container_name: bittan_test_server
-    image: ghcr.io/fysiksektionen/bittan-backend:${BITTAN_TEST_VERSION}
-    env_file: ./services/bittan_test/bittan_test_server.env
+  ## bittan_marke
+  bittan-marke-server:
+    container_name: bittan-marke-server
+    image: ghcr.io/fysiksektionen/bittan-backend:${BITTAN_MARKE_VERSION}
+    env_file: ./services/bittan_marke/bittan_marke_server.env
     volumes:
-      - ./services/bittan_test/static:/bittan/static
-      - ./services/bittan_test/swish_certificates:/bittan/certificates
-      - ./services/bittan_test/gmail_creds:/bittan/gmail_creds
+      - ./services/bittan_marke/static:/bittan/static
+      - ./services/bittan_marke/swish_certificates:/bittan/certificates
+      - ./services/bittan_marke/gmail_creds:/bittan/gmail_creds
+      - ./services/bittan_marke/logs:/bittan/logs
     environment:
-      BITTAN_BACKEND_URL: "https://f.kth.se/bittan-test"
-      ALLOWED_HOSTS: '["f.kth.se"]'
-      DATABASE_HOST: bittan_test_postgres
-      DATABASE_NAME: bittan_test_db
+      BITTAN_BACKEND_URL: "https://f.kth.se/bittan-marke-django"
+      BITTAN_FRONTEND_URL: "https://f.kth.se/bittan-marke"
+      ALLOWED_HOSTS: '["f.kth.se", "bittan-marke-server"]'
+      DATABASE_HOST: bittan_marke_postgres
+      DATABASE_NAME: bittan_marke_db
       DATABASE_USER: postgres
       DATABASE_PORT: 5432
-      SWISH_PEM_FILE_PATH: ./certificates/myCertificate.pem
-      SWISH_KEY_FILE_PATH: ./certificates/PrivateKey.key
-      SWISH_PAYEE_ALIAS: 1230810689
-      SWISH_API_URL: https://staging.getswish.pub.tds.tieto.com/swish-cpcapi
+      SWISH_PEM_FILE_PATH: ./certificates/swish_certificate_202503132004.pem
+      SWISH_KEY_FILE_PATH: ./certificates/MySwishKey.key
+      SWISH_API_URL: https://cpc.getswish.net/swish-cpcapi
       DEBUG: "False"
-    ports:
-      - '8000:8000'
     depends_on:
-      bittan_test_postgres:
+      bittan_marke_postgres:
         condition: service_healthy
 
-  bittan_test_postgres:
-    container_name: bittan_test_postgres
+  bittan_marke_postgres:
+    container_name: bittan_marke_postgres
     image: postgres
     volumes:
-      - ./services/bittan_test/postgres_data:/var/lib/postgresql/data
-    env_file: ./services/bittan_test/bittan_test_postgres.env
+      - ./services/bittan_marke/postgres_data:/var/lib/postgresql/data
+    env_file: ./services/bittan_marke/bittan_marke_postgres.env
     environment:
-      POSTGRES_DB: bittan_test_db
+      POSTGRES_DB: bittan_marke_db
       POSTGRES_USER: postgres
-    ports:
-      - '5432:5432'
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 1s
+      timeout: 5s
+      retries: 10
+
+  ## bittan_fysikalen
+  bittan-fysikalen-server:
+    container_name: bittan-fysikalen-server
+    image: ghcr.io/fysiksektionen/bittan-backend:${BITTAN_FYSIKALEN_VERSION}
+    env_file: ./services/bittan_fysikalen/bittan_fysikalen_server.env
+    volumes:
+      - ./services/bittan_fysikalen/static:/bittan/static
+      - ./services/bittan_fysikalen/swish_certificates:/bittan/certificates
+      - ./services/bittan_fysikalen/gmail_creds:/bittan/gmail_creds
+      - ./services/bittan_fysikalen/logs:/bittan/logs
+    environment:
+      BITTAN_BACKEND_URL: "https://fysikalen.se/bittan-fysikalen"
+      BITTAN_FRONTEND_URL: "https://fysikalen.se/biljetter"
+      ALLOWED_HOSTS: '["fysikalen.se", "bittan-fysikalen-server"]'
+      DATABASE_HOST: bittan-fysikalen-postgres
+      DATABASE_NAME: bittan_fysikalen_db
+      DATABASE_USER: postgres
+      DATABASE_PORT: 5432
+      SWISH_PEM_FILE_PATH: ./certificates/swish_certificate_202503132004.pem
+      SWISH_KEY_FILE_PATH: ./certificates/MySwishKey.key
+      SWISH_API_URL: https://cpc.getswish.net/swish-cpcapi
+      DEBUG: "False"
+    depends_on:
+      bittan-fysikalen-postgres:
+        condition: service_healthy
+
+  bittan-fysikalen-postgres:
+    container_name: bittan-fysikalen-postgres
+    image: postgres
+    volumes:
+      - ./services/bittan_fysikalen/postgres_data:/var/lib/postgresql/data
+    env_file: ./services/bittan_fysikalen/bittan_fysikalen_postgres.env
+    environment:
+      POSTGRES_DB: bittan_fysikalen_db
+      POSTGRES_USER: postgres
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 1s
