--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -60,28 +60,27 @@ http {
             fastcgi_param SCRIPT_NAME $fastcgi_script_name;
         }
 
-        location /bittan-test/static/ {
+        location /bittan-marke-django/static/ {
         }
 
-        location /bittan-test/ {
+        location /bittan-marke-django/ {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $http_host;
             proxy_redirect off;
-            proxy_pass http://bittan_test_server:8000;
+            proxy_pass http://bittan-marke-server:8000;
         }
 
-        location /bittan-test/swish/callback/ {
-            allow 89.46.83.0/24;
-            allow 103.57.74.0/24;
-            allow 77.81.6.112;
+        location /bittan-marke-django/swish/callback/ {
+            allow 213.132.115.94;
             deny all;
 
-            proxy_pass http://bittan_test_server:8000;
+            proxy_pass http://bittan-marke-server:8000;
         }
 
-        location /biljett-test/ {
-            try_files $uri /biljett-test/index.html;
+        location /bittan-marke/ {
+            try_files $uri /bittan-marke/index.html;
         }
+
 
         # Wordpress options. DO NOT CHANGE
         location / {
@@ -116,6 +115,38 @@ http {
         root /fysikalen.se;
 
 
+        location /bittan-fysikalen/static/ {
+        }
+
+        location /bittan-fysikalen/ {
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $http_host;
+            proxy_redirect off;
+            proxy_pass http://bittan-fysikalen-server:8000;
+        }
+
+	location /bittan-fysikalen/swish/callback/ {
+		allow 213.132.115.94;
+		deny all;
+
+		proxy_pass http://bittan-fysikalen-server:8000;
+	}
+
+        location /biljetter/ {
+            try_files $uri /biljetter/index.html;
+        }
+
+        location /en/tickets/ {
+            return 302 /biljetter/;
+        }
+	
+	location /en/tickets-2-2/ {
+		return 302 /biljetter/;
+	}
+
+	location /biljetter-3/ {
+		return 302 /biljetter/;
+	}
 
         # Wordpress options. DO NOT CHANGE
         location / {
