Comment out bittan-fysikalen-frontend stuff to hide it

--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -132,21 +132,21 @@ http {
 		proxy_pass http://bittan-fysikalen-server:8000;
 	}
 
-        location /biljetter/ {
-            try_files $uri /biljetter/index.html;
-        }
+	#location /biljetter/ {
+	#try_files $uri /biljetter/index.html;
+	#}
 
-        location /en/tickets/ {
-            return 302 /biljetter/;
-        }
+	#location /en/tickets/ {
+	#return 302 /biljetter/;
+	#}
 	
-	location /en/tickets-2-2/ {
-		return 302 /biljetter/;
-	}
+	#location /en/tickets-2-2/ {
+	#return 302 /biljetter/;
+	#}
 
-	location /biljetter-3/ {
-		return 302 /biljetter/;
-	}
+	#location /biljetter-3/ {
+	#return 302 /biljetter/;
+	#}
 
         # Wordpress options. DO NOT CHANGE
         location / {
