Apply conf for frontend fnkth.se

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /services/ffusion.se
 /services/f.kth.se
 /services/fysikalen.se
+/services/fnkth.se
 /services/google
 /services/kons-count
 /services/namndkompassen
