--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -208,6 +208,17 @@ http {
         #}
     }
 
+    server {
+        include mime.types;
+        include fastcgi.conf;
+
+        listen              443 ssl;
+        server_name         fnkth.se www.fnkth.se;
+        ssl_certificate     certificates/live/fnkth.se/fullchain.pem;
+        ssl_certificate_key certificates/live/fnkth.se/privkey.pem;
+
+        root /fnkth.se;
+    }
 
     # Automatically send all requests to fysiksektionen.se to f.kth.se
     server {
@@ -263,6 +274,19 @@ http {
 
         location / {
             return 301 https://ffusion.se$request_uri;
+        }
+    }
+
+    server {
+        listen              80;
+        server_name         fnkth.se www.fnkth.se;
+
+        location /.well-known/acme-challenge/ {
+            root /certbot;
+        }
+
+        location / {
+            return 301 https://fnkth.se$request_uri;
         }
     }
 }
