Add basic placeholder conf for fnkth.se

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /services/f.kth.se
 /services/fysikalen.se
 /services/fnkth.se
+/services/fnkth.se-flask
 /services/google
 /services/kons-count
 /services/namndkompassen
