--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -218,6 +218,33 @@ http {
         ssl_certificate_key certificates/live/fnkth.se/privkey.pem;
 
         root /fnkth.se;
+
+        # Serve static files
+        location / {
+            try_files $uri $uri/ /index.html;
+        }
+
+        location /pages/ {
+            try_files $uri $uri/ =404;
+        }
+
+        location /assets/ {
+            try_files $uri $uri/ =404;
+        }
+
+        # POST form submission to Flask
+        location = /pages/contact {
+            proxy_pass http://fnkth.se-flask:5001/pages/contact;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        # JSON API requests
+        location /api/ {
+            proxy_pass http://fnkth.se-flask:5001/api/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
     }
 
     # Automatically send all requests to fysiksektionen.se to f.kth.se
