--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ CYBERFOHS_VERSION=v2024.1.0
 SIGNATURE_VERSION=v0.0.6
 BITTAN_MARKE_VERSION=v1.5.4-marke
 BITTAN_FYSIKALEN_VERSION=v1.1.0-fysikalen
+FNKTHSE_VERSION=v0.0.7-alpha
