--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -81,6 +81,12 @@ http {
             try_files $uri /bittan-marke/index.html;
         }
 
+	location /arcade/ {
+	    return 302 /arcade/0;
+	}
+	location /arcade/0 {
+	}
+
 
         # Wordpress options. DO NOT CHANGE
         location / {
